--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.6.2",
     "drizzle-kit": "^0.31.5",
-    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
@@ -33,7 +32,6 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.2.0",
-    "postgres": "^3.4.7",
-    "zod": "^4.1.11"
+    "postgres": "^3.4.7"
   }
 }
