--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy-static",
+    "copy-static": "node ./scripts/copyStatic.mjs",
     "start": "node dist/index.js",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
@@ -15,6 +16,13 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "imports": {
+    "#api/*": "./dist/api/*",
+    "#lib/*": "./dist/lib/*",
+    "#db/*": "./dist/db/*",
+    "#config": "./dist/config.js",
+    "#auth": "./dist/auth.js"
+  },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
@@ -32,6 +40,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.2.0",
+    "pdfkit": "^0.15.0",
     "postgres": "^3.4.7"
   }
 }
